# nbdev_test

./: pyproject.toml  settings.ini
nbdev_test/: _modidx.py
nbs/: index.ipynb  nbdev.yml
